--- a/adehackeroijavascript5.html
+++ b/adehackeroijavascript5.html
@@ -1,72 +1,58 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Hakkeriviesti</title>
-    <style>
-        body {
-            background-color: #000;
-            color: #00ff00; /* Kirkkaampi vihreä, kuten terminaalissa */
-            font-family: 'Menlo', 'Consolas', 'Courier New', monospace; /* iPhone-tyylinen fontti */
-            font-size: 18px; /* Pienempi, terminaalimainen koko */
-            line-height: 1.4; /* Tiukempi riviväli */
-            text-align: left; /* Terminaalit ovat yleensä vasemmalle tasattuja */
-            padding: 20px; /* Pieni marginaali reunoille */
-            text-shadow: 0 0 5px rgba(0, 255, 0, 0.5); /* Kevyt hehku */
+<script>
+    // Matrix-koodisade
+    const canvas = document.getElementById('matrix');
+    const ctx = canvas.getContext('2d');
+    canvas.height = window.innerHeight;
+    canvas.width = window.innerWidth;
+    const chars = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'; /* Normaalit numerot ja kirjaimet */
+    const fontSize = 14;
+    const columns = canvas.width / fontSize;
+    const drops = [];
+    for (let x = 0; x < columns; x++) drops[x] = 1;
+    function draw() {
+        ctx.fillStyle = 'rgba(0, 0, 0, 0.05)'; /* Häivytys taustalle */
+        ctx.fillRect(0, 0, canvas.width, canvas.height);
+        ctx.fillStyle = '#0F0'; /* Vihreä väri */
+        ctx.font = fontSize + 'px monospace';
+        for (let i = 0; i < drops.length; i++) {
+            const text = chars.charAt(Math.floor(Math.random() * chars.length));
+            ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+            if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) drops[x] = 0;
+            drops[i]++;
         }
-        .terminal {
-            max-width: 800px; /* Rajoitettu leveys, kuten terminaali-ikkuna */
-            margin: 0 auto; /* Keskitetään */
-        }
-        .cursor {
-            display: inline-block;
-            width: 10px;
-            height: 20px;
-            background-color: #00ff00;
-            vertical-align: middle;
-            animation: blink 0.7s step-end infinite; /* Vilkkuu 0,7 s välein */
-        }
-        @keyframes blink {
-            50% { opacity: 0; }
-        }
-    </style>
-</head>
-<body>
-    <div class="terminal">
-        <h1 id="line1"></h1>
-        <h2 id="line2"></h2>
-        <h2 id="line3"></h2>
-    </div>
+    }
+    setInterval(draw, 33); /* Päivittää 30 fps */
 
-    <script>
-        function typeWriter(elementId, text, speed, startDelay, cursorId) {
-            let i = 0;
-            const element = document.getElementById(elementId);
-            // Lisää kursori
-            const cursor = document.createElement('span');
-            cursor.id = cursorId;
-            cursor.className = 'cursor';
-            element.appendChild(cursor);
+    // Kirjoitusefekti viestille
+    function typeWriter(elementId, text, speed, startDelay, cursorId) {
+        let i = 0;
+        const element = document.getElementById(elementId);
+        // Lisää kursori
+        const cursor = document.createElement('span');
+        cursor.id = cursorId;
+        cursor.className = 'cursor';
+        element.appendChild(cursor);
 
-            setTimeout(() => {
-                const interval = setInterval(() => {
-                    if (i < text.length) {
-                        // Lisää kirjain ja säilytä kursori lopussa
-                        element.innerHTML = text.substring(0, i + 1);
-                        element.appendChild(cursor);
-                        i++;
-                    } else {
-                        // Poista kursori, kun rivi on valmis
-                        cursor.remove();
-                        clearInterval(interval);
-                    }
-                }, speed);
-            }, startDelay);
-        }
+        setTimeout(() => {
+            const interval = setInterval(() => {
+                if (i < text.length) {
+                    // Lisää kirjain ja säilytä kursori lopussa
+                    element.innerHTML = text.substring(0, i + 1);
+                    element.appendChild(cursor);
+                    i++;
+                } else {
+                    // Poista kursori, kun rivi on valmis
+                    cursor.remove();
+                    clearInterval(interval);
+                }
+            }, speed);
+        }, startDelay);
+    }
 
-        // Kirjoita rivit yksitellen
-        typeWriter('line1', 'Moro! Täällä Ade!', 25, 1000, 'cursor1');
-        typeWriter('line2', 'Opin juuri miten murtaudutaan toisen ios iphonelle!', 25, 2000, 'cursor2');
-        typeWriter('line3', 'Just kidding!  :D', 25, 3500, 'cursor3');
-    </script>
-</body>
-</html>
+    // Kirjoita rivit yksitellen, 1 s tauko
+    typeWriter('line1', 'WARNING! Sinut on hackeroitu!', 50, 1000, 'cursor1');
+    typeWriter('line2', 'Muhahaha!!', 50, 2000, 'cursor2');
+    typeWriter('line3', 'Ei oikeasti.. tämä oli vitsi!', 50, 3000, 'cursor3');
+    typeWriter('line4', 'Testailen koodia', 50, 4000, 'cursor4');
+    typeWriter('line5', 'T:Aatu', 50, 5000, 'cursor5');
+</script>
